--- a/app/views/progresses/_form.html.erb
+++ b/app/views/progresses/_form.html.erb
@@ -7,8 +7,8 @@
     <%= f.input :milestone %>
     <%= f.input :post %>
     <%= f.input :status %>
-    <%= f.input :date %>
-    <%= f.input :session_id, label: 'User' %>
+    <%= f.input :date , :readonly => true%>
+    
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
