--- a/app/views/progresses/index.html.erb
+++ b/app/views/progresses/index.html.erb
@@ -3,6 +3,11 @@
   <h1><%=t '.title', :default => model_class.model_name.human %> <i class="icon-cogs icon-blue"></i></h1>
 </div>
 
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_progress_path,
+            :class => 'btn btn-primary' %>
+
+
 <table class="table table-bordered">
   <thead>
     <tr>
