--- a/app/views/staffs/show.html.erb
+++ b/app/views/staffs/show.html.erb
@@ -14,8 +14,8 @@
   <dd><%= @staff.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:attachment) %>:</strong></dt> 
   <dd><%= link_to "PDF", @staff.attachment.url, :target => '_blank' %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:grantee_id) %>:</strong></dt>
-  <dd><%= @staff.grantee_id %></dd>
+  <!--=<dt><strong><%= model_class.human_attribute_name(:grantee_id) %>:</strong></dt>
+  <dd><%= @staff.grantee_id %></dd>-->
 </dl>
 
 <div class="form-actions">
