--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
                 <ul>
                     <li><a href="">About Us</a></li>
                     <li><%= link_to('Contact Us')  %></li>
-										<li><%= link_to('Registered Domains')  %></li>
+										<!--<li><%= link_to('Registered Domains')  %></li>-->
 										
                 </ul>
             </div>
@@ -19,11 +19,11 @@
                 <h4>Resources</h4>
                 <ul>
                     <li>
-											<a href="https://github.com/anami90/epuka/wiki"title="Documentation" target="_blank">Documentation</a>
+											<a href="https://github.com/anami90"title="Documentation" target="_blank">Documentation</a>
 										</li>
                     <li><a href="">FAQ</a></li>
                     <li>
-											<a href="https://github.com/anami90/epuka/issues"title="Issues" target="_blank">Issues</a>
+											<a href="https://github.com/anami90"title="Issues" target="_blank">Issues</a>
 										</li>
                 </ul>
             </div>
@@ -31,10 +31,9 @@
                 <h4>Connect</h4>
                 <ul>
                     <li><a href="http://www.facebook.com/pages/GMS" title="Facebook" target="_blank">Facebook</a></li>
-                    <li><a href="https://twitter.com/#!/EpukaDRS"title="Twitter" target="_blank">Twitter</a></li>
                     <li><a href="" title="LinkedIn" target="_blank">LinkedIn</a></li>
                     <li><a href="" title="Google+" target="_blank">Google+</a></li>
-                    <li><a href="http://epuka.herokuapp.com/feed/rss" title="RSS" target="_blank">RSS</a></li>
+                    
                 </ul>
             </div>
         </div>
